objects/RFP_FAQs__c.object
<CustomObject>
    <label>RFP FAQs</label>
    <nameField>
        <label>RFP FAQs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFP FAQs</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>RFP_Category__c</fullName>
        <label>RFP Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Rates</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>DLNG info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Question__c</fullName>
        <label>RFP Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Response__c</fullName>
        <label>RFP Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>